# destiny-couchdb

./: .gitignore  Justfile  Makefile  NOTES  get_assets.py  pyproject.toml  search.py  show_manifest.py
destiny_couchdb/: __init__.py  __main__.py  client.py  couchdb.py  manifest.py
